--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,11 @@
 
     <!-- blog css  -->
     <link rel="stylesheet" href="css/blog.css">
+
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -67,7 +72,7 @@
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary read-btn mt-3">Read More</a>
+                                <a href="#" class="btn btn-primary read-btn mt-3 blog-read-btn">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -80,7 +85,7 @@
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary read-btn mt-3">Read More</a>
+                                <a href="#" class="btn btn-primary read-btn mt-3 blog-read-btn">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -93,9 +98,14 @@
                     <div class="col-lg-5">
                         <div class="">
                             <h2 class="sub-blog-title">Sub Blog Title</h2>
-                            <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio voluptatibus quidem numquam consectetur natus magnam eum sequi, repellat, ipsa iusto ipsum veniam inventore iste necessitatibus debitis aliquid recusandae reprehenderit cumque!
-                            Voluptate ipsa eaque aliquid architecto, harum ratione suscipit illo maxime? Ad ex ducimus rerum voluptas quod asperiores reprehenderit, eveniet officiis incidunt animi natus omnis a nemo consequatur corporis provident hic.
-                            Sint, tempora.</p>
+                            <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio
+                                voluptatibus quidem numquam consectetur natus magnam eum sequi, repellat, ipsa iusto
+                                ipsum veniam inventore iste necessitatibus debitis aliquid recusandae reprehenderit
+                                cumque!
+                                Voluptate ipsa eaque aliquid architecto, harum ratione suscipit illo maxime? Ad ex
+                                ducimus rerum voluptas quod asperiores reprehenderit, eveniet officiis incidunt animi
+                                natus omnis a nemo consequatur corporis provident hic.
+                                Sint, tempora.</p>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -108,7 +118,7 @@
             </div>
         </section>
         <section>
-            <div class="container-fliud py-5 my-4">
+            <div class="container-fliud py-5 my-4 d-flex flex-column align-items-center">
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-2">
                         <div class="blog">
@@ -116,8 +126,13 @@
                                 <h3 class="blog-name">Blog Title</h3>
                             </div>
                             <div class="blog-text mt-2">
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod odio iure.</p>
-                                <a href="" class="details">Details</a>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum
+                                    recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod
+                                    odio iure.</p>
+                                <div class="details-wrap d-flex align-items-center gap-2   ">
+                                    <a href="" class="details">Details</a><i
+                                        class="fa-solid fa-arrow-right right-arrow"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -127,8 +142,13 @@
                                 <h3 class="blog-name">Blog Title</h3>
                             </div>
                             <div class="blog-text mt-2">
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod odio iure, quasi iusto esse dolor molestiae porro? Velit!</p>
-                                <a href="" class="details">Details</a>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum
+                                    recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod
+                                    odio iure, quasi iusto esse dolor molestiae porro? Velit!</p>
+                                <div class="details-wrap d-flex align-items-center gap-2   ">
+                                    <a href="" class="details">Details</a><i
+                                        class="fa-solid fa-arrow-right right-arrow"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -138,8 +158,13 @@
                                 <h3 class="blog-name">Blog Title</h3>
                             </div>
                             <div class="blog-text mt-2">
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod odio iure, quasi iusto esse dolor molestiae porro</p>
-                                <a href="" class="details">Details</a>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum
+                                    recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod
+                                    odio iure, quasi iusto esse dolor molestiae porro</p>
+                                <div class="details-wrap d-flex align-items-center gap-2   ">
+                                    <a href="" class="details">Details</a><i
+                                        class="fa-solid fa-arrow-right right-arrow"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -149,8 +174,13 @@
                                 <h3 class="blog-name">Blog Title</h3>
                             </div>
                             <div class="blog-text mt-2">
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod odio iure.</p>
-                                <a href="" class="details">Details</a>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum
+                                    recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod
+                                    odio iure.</p>
+                                <div class="details-wrap d-flex align-items-center gap-2   ">
+                                    <a href="" class="details">Details</a><i
+                                        class="fa-solid fa-arrow-right right-arrow"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -160,14 +190,19 @@
                                 <h3 class="blog-name">Blog Title</h3>
                             </div>
                             <div class="blog-text mt-2">
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod odio iure, quasi iusto esse dolor molestiae porro? Velit!
-                                Sequi nulla obcaecati quam.</p>
-                                <a href="" class="details">Details</a>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor praesentium dolorum
+                                    recusandae illum, provident ex quaerat? Explicabo saepe consequatur voluptatem quod
+                                    odio iure, quasi iusto esse dolor molestiae porro? Velit!
+                                    Sequi nulla obcaecati quam.</p>
+                                <div class="details-wrap d-flex align-items-center gap-2   ">
+                                    <a href="" class="details">Details</a><i
+                                        class="fa-solid fa-arrow-right right-arrow"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button type="button" class="view-btn more-blog-btn"> More Blogs</button>
+                <button type="button" class=" btn text-center mt-4"> More Blogs</button>
             </div>
         </section>
 
