--- a/category.html
+++ b/category.html
@@ -57,10 +57,10 @@
                 <div class="col-3 col-md-2  p-3 sidebar align-self-start">
                     <h4 class="mb-4 sidebar-heading">Category</h4>
                     <ul class="nav flex-column gap-3">
-                        <li class="side-nav-item"><a class="nav-link" href="#">Residential</a></li>
-                        <li class="side-nav-item"><a class="nav-link" href="#">Commercial</a></li>
-                        <li class="side-nav-item"><a class="nav-link" href="#">Industrial</a></li>
-                        <li class="side-nav-item"><a class="nav-link" href="#">Outdoor</a></li>
+                        <li class="side-nav-item"><a class="nav-link side-nav-link" href="#">Residential</a></li>
+                        <li class="side-nav-item"><a class="nav-link side-nav-link" href="#">Commercial</a></li>
+                        <li class="side-nav-item"><a class="nav-link side-nav-link" href="#">Industrial</a></li>
+                        <li class="side-nav-item"><a class="nav-link side-nav-link" href="#">Outdoor</a></li>
                     </ul>
                 </div>
 
@@ -72,7 +72,7 @@
                             <div class="row g-4">
                                 <div class="col-lg-9">
                                     <div class="category-container">
-                                        <div class="row g-4">
+                                        <div class="row g-4 d-flex align-items-center justify-content-center">
                                             <div class="col-lg-4">
                                                 <div class="category-box">
                                                     <div class="category-image category-image-1"></div>
@@ -81,7 +81,7 @@
                                                         <p class="category-description text-white-40">Lorem, ipsum dolor
                                                             sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
                                                         <button type="button"
-                                                            class="btn margin-auto explore-btn">Explore</button>
+                                                            class=" margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -93,7 +93,7 @@
                                                         <p class="category-description text-white-40">Lorem, ipsum dolor
                                                             sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
                                                         <button type="button"
-                                                            class="btn margin-auto explore-btn">Explore</button>
+                                                            class=" margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -105,7 +105,7 @@
                                                         <p class="category-description text-white-40">Lorem, ipsum dolor
                                                             sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
                                                         <button type="button"
-                                                            class="btn margin-auto explore-btn">Explore</button>
+                                                            class=" margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -117,7 +117,7 @@
                                                         <p class="category-description text-white-40">Lorem, ipsum dolor
                                                             sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
                                                         <button type="button"
-                                                            class="btn margin-auto explore-btn">Explore</button>
+                                                            class=" margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -129,7 +129,7 @@
                                                         <p class="category-description text-white-40">Lorem, ipsum dolor
                                                             sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
                                                         <button type="button"
-                                                            class="btn margin-auto explore-btn">Explore</button>
+                                                            class=" margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -141,7 +141,7 @@
                                                         <p class="category-description text-white-40">Lorem, ipsum dolor
                                                             sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
                                                         <button type="button"
-                                                            class="btn margin-auto explore-btn">Explore</button>
+                                                            class=" margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -153,7 +153,7 @@
                                                         <p class="category-description text-white-40">Lorem, ipsum dolor
                                                             sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
                                                         <button type="button"
-                                                            class="btn margin-auto explore-btn">Explore</button>
+                                                            class=" margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -165,7 +165,7 @@
                                                         <p class="category-description text-white-40">Lorem, ipsum dolor
                                                             sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
                                                         <button type="button"
-                                                            class="btn margin-auto explore-btn">Explore</button>
+                                                            class=" margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -177,11 +177,11 @@
                                                         <p class="category-description text-white-40">Lorem, ipsum dolor
                                                             sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
                                                         <button type="button"
-                                                            class="btn margin-auto explore-btn">Explore</button>
+                                                            class=" margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <button type="button" class="margin-auto view-btn "> View More</button>
+                                            <button type="button" class="margin-auto btn more-btn"> View More</button>
                                         </div>
                                     </div>
                                 </div>
